# isaac

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
isaac-bootstrap/: Cargo.toml
isaac-bootstrap/src/: main.rs
isaac-bootstrap/src/os/: linux.rs  windows.rs
isaac-inject/: Cargo.toml
isaac-inject/src/: lib.rs
isaac-inject/src/os/: windows.rs
rustic/: .gitignore  Cargo.toml  main.lua  metadata.xml
rustic-bootstrap/: Cargo.toml
rustic-bootstrap/src/os/: macos.rs  windows.rs
rustic-inject/: Cargo.toml
rustic-inject/src/os/: windows.rs
rustic/rustic/: main.lua
rustic/rustic-bootstrap/: Cargo.toml
rustic/rustic-bootstrap/src/: main.rs
rustic/rustic-bootstrap/src/os/: mod.rs
rustic/rustic-bootstrap/src/os/linux/: main.rs
rustic/rustic-bootstrap/src/os/windows/: main.rs
rustic/rustic-inject/: Cargo.toml
rustic/rustic-inject/src/: lib.rs
rustic/rustic-inject/src/os/: mod.rs
rustic/rustic-inject/src/os/macos/: lib.rs
rustic/rustic-inject/src/os/unknown/: lib.rs
rustic/rustic-inject/src/os/windows/: lib.rs
rustic/rustic-inject/src/os/windows/hooks/: kernel32.rs  lua.rs  mod.rs
testament/src/: Tomat.Testament.sln  Tomat.Testament.sln.DotSettings  paths.targets
testament/src/Debug/: Lua5.3.3r.exp  Lua5.3.3r.lib
testament/src/Tomat.Testament.API/: Native.cs  Tomat.Testament.API.csproj
testament/src/Tomat.Testament.Host/: Cargo.toml
testament/src/Tomat.Testament.Lua/: Tomat.Testament.Lua.csproj.x  Tomat.Testament.Lua.vcxproj  Tomat.Testament.Lua.vcxproj.filters  clr.cpp  clr.h  dllmain.cpp  (+4 more)
testament_old/src/: Tomat.Testament.sln  Tomat.Testament.sln.DotSettings
(+53 files in other folders)
