[package]
name = "rustic-inject"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rlua = { version = "0.19.4" }
retour = { version = "0.1.0", features = ["nightly"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }
retour-utils = { version = "0.1.2" }
