# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rustic-bootstrap"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
] }
