[package]
name = "rustic-inject"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
rlua-lua53-sys = { version = "0.1.3" }
retour = { version = "0.1.0", features = ["nightly"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Foundation",
] }
retour-utils = { version = "0.1.2" }
